update menu bar

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ html {
 }
 
 .menuButton {
-  @apply flex-1 h-full flex flex-col items-center justify-center;
+  @apply flex-1 h-full flex flex-col items-center justify-center font-bold;
 }
 
 .dot {
