--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ html {
   padding: 0;
 }
 
+body {
+  background-color: #1f1f1f;
+}
+
 .menuButton {
   @apply flex-1 h-full flex flex-col items-center justify-center font-bold;
 }
