--- a/ride-fair/app/globals.css
+++ b/ride-fair/app/globals.css
@@ -48,7 +48,7 @@ body {
   }
 
   .input {
-    @apply w-full p-4 bg-transparent border border-neutrals-500 rounded-md;
+    @apply w-full p-4 bg-transparent border border-neutrals-500 text-neutrals-100 rounded-md;
   }
 
   .input--active {
