--- a/ride-fair/app/globals.css
+++ b/ride-fair/app/globals.css
@@ -68,6 +68,6 @@ body {
   }
 
   .button-nav {
-    @apply flex-1 flex flex-col justify-center items-center p-0 h-full;
+    @apply flex-1 flex flex-col justify-center items-center p-0 pt-2 h-full;
   }
 }
